# OculusSDK

OculusSDK/: Release_Notes.txt  THIRD_PARTY_NOTICES.txt
OculusSDK/LibOVR/Include/: OVR_CAPI.h  OVR_CAPI_Audio.h  OVR_CAPI_D3D.h  OVR_CAPI_GL.h  OVR_CAPI_Keys.h  OVR_ErrorCode.h  OVR_Version.h
OculusSDK/LibOVR/Include/Extras/: OVR_CAPI_Util.h  OVR_Math.h
OculusSDK/LibOVR/Projects/Windows/: LibOVR.props
OculusSDK/LibOVR/Shim/: OVR_CAPIShim.c  OVR_CAPI_Prototypes.h  OVR_CAPI_Util.cpp
OculusSDK/LibOVR/Src/: OVR_CAPIShim.c  OVR_CAPI_Util.cpp
OculusSDK/LibOVRKernel/Src/GL/: CAPI_GLE.cpp  CAPI_GLE.h  CAPI_GLE_GL.h
OculusSDK/LibOVRKernel/Src/Kernel/: OVR_Alg.cpp  OVR_Alg.h  OVR_Allocator.cpp  OVR_Allocator.h  OVR_Array.h  OVR_Atomic.cpp  OVR_Atomic.h  OVR_CRC32.cpp  OVR_CRC32.h  OVR_CallbacksInternal.h  OVR_Compiler.h  OVR_ContainerAllocator.h  OVR_DebugHelp.cpp  OVR_DebugHelp.h  OVR_Delegates.h  OVR_Deque.h  OVR_Error.cpp  OVR_Error.h  OVR_File.cpp  OVR_File.h  OVR_FileFILE.cpp  OVR_Hash.h  OVR_JSON.cpp  OVR_JSON.h  OVR_KeyCodes.h  OVR_List.h  OVR_Lockless.h  OVR_Log.cpp  OVR_Log.h  OVR_NewOverride.inl  OVR_Nullptr.h  OVR_Rand.cpp  OVR_Rand.h  OVR_RefCount.cpp  OVR_RefCount.h  OVR_SharedMemory.cpp  OVR_Std.cpp  OVR_Std.h  OVR_String.cpp  OVR_String.h  (+19 more)
OculusSDK/LibOVRKernel/Src/Tracing/: LibOVREvents.h  Tracing.h
OculusSDK/LibOVRKernel/Src/Util/: Util_D3D11_Blitter.cpp  Util_D3D11_Blitter.h  Util_Direct3D.cpp  Util_Direct3D.h  Util_GL_Blitter.cpp  Util_GL_Blitter.h  Util_GetSystemSpecs.cpp  Util_ImageWindow.cpp  Util_ImageWindow.h  Util_LongPollThread.cpp  Util_LongPollThread.h  Util_SystemGUI.cpp  Util_SystemGUI.h  Util_SystemInfo.cpp  Util_SystemInfo.h  Util_Watchdog.cpp  Util_Watchdog.h
OculusSDK/Logging/Logging/: Logging-fwd.h  Logging_Library.h  Logging_OutputPlugins.h  Logging_Tools.h
OculusSDK/Logging/include/: Logging_Library.h  Logging_OutputPlugins.h  Logging_Tools.h
OculusSDK/Logging/src/: Logging_Library.cpp  Logging_OutputPlugins.cpp
OculusSDK/Logging/src/internal/: Logging_Tools.cpp
OculusSDK/OculusWorldDemo.app/Contents/: Info.plist  PkgInfo
OculusSDK/OculusWorldDemo.app/Contents/MacOS/: OculusWorldDemo
OculusSDK/OculusWorldDemo.app/Contents/_CodeSignature/: CodeResources
OculusSDK/Samples/CommonSrc/Platform/: Gamepad.h  OSX_Platform.mm  Platform.cpp  Platform.h  Platform_Default.h  Win32_Gamepad.cpp  Win32_Gamepad.h  Win32_Platform.cpp  Win32_Platform.h
OculusSDK/Samples/CommonSrc/Render/: Render_D3D10_Device.cpp  Render_D3D10_Device.h  Render_D3D11_Device.cpp  Render_D3D11_Device.h  Render_D3D1X_Device.cpp  Render_D3D1X_Device.h  Render_Device.cpp  Render_Device.h  Render_Font.h  Render_GL_Device.cpp  Render_GL_Device.h  Render_GL_Win32_Device.cpp  Render_GL_Win32_Device.h  Render_LoadTextureDDS.cpp  Render_LoadTextureTGA.cpp  Render_XmlSceneLoader.cpp  Render_XmlSceneLoader.h
OculusSDK/Samples/OculusRoomTiny/: Win32_DX11AppUtil.h  Win32_RoomTiny_AppRender.h  Win32_RoomTiny_ExampleFeatures.h  Win32_RoomTiny_Main.cpp
OculusSDK/Samples/OculusWorldDemo/: OculusWorldDemo.cpp  OculusWorldDemo.h  OculusWorldDemo_Scene.cpp  Player.h
OculusSDK/Tools/ShaderReflector/: ShaderReflector_VS2010.sln  ShaderReflector_VS2012.sln
OculusWorldDemo.app/Contents/: Info.plist
OculusWorldDemo.app/Contents/MacOS/: OculusWorldDemo
PlatformSDK/Android/include/: OVR_AchievementDefinitionArray.h  OVR_AchievementProgress.h  OVR_AchievementProgressArray.h  OVR_DataStore.h  OVR_LeaderboardStartAt.h  OVR_LeaderboardUpdateStatus.h  OVR_MatchmakingRoomArray.h  OVR_MessageType.h  OVR_Networking.h  OVR_PlatformVersion.h  OVR_Product.h  OVR_ProductArray.h  OVR_Purchase.h  OVR_PurchaseArray.h  OVR_Requests_Achievements.h  OVR_Requests_Entitlement.h  OVR_Requests_Matchmaking.h  OVR_Requests_Room.h  OVR_Requests_User.h  OVR_Room.h  OVR_RoomJoinPolicy.h  OVR_RoomJoinability.h  OVR_RoomType.h  OVR_Types.h  OVR_User.h
PlatformSDK/Android/jni/: Android.mk
PlatformSDK/Samples/CloudStorageExample/: Readme.md
PlatformSDK/Samples/NativeSample/: NativeSample.sln  NativeSample.vcxproj  SampleGame.cpp  SampleGame.h  main.cpp
PlatformSDK/Samples/NetChat/: NetChat.cpp  NetChat.h  NetChat.vcxproj  State.cpp  State.h  main.cpp
PlatformSDK/Windows/: LibOVRPlatform32_1.lib  LibOVRPlatform64_1.lib  OVR_PlatformLoader.cpp
PlatformSDK/include/: OVR_AchievementDefinition.h  OVR_AchievementType.h  OVR_Error.h  OVR_KeyValuePairType.h  OVR_LeaderboardEntry.h  OVR_LeaderboardEntryArray.h  OVR_LeaderboardFilterType.h  OVR_MatchmakingCriterionImportance.h  OVR_MatchmakingEnqueueResult.h  OVR_MatchmakingEnqueueResultAndRoom.h  OVR_MatchmakingRoom.h  OVR_Message.h  OVR_NetworkingPeer.h  OVR_PingResult.h  OVR_Platform.h  OVR_Requests_IAP.h  OVR_Requests_Leaderboard.h  OVR_RoomArray.h  OVR_UserArray.h  OVR_UserProof.h
Samples/CommonSrc/Platform/: Platform.h  Win32_Gamepad.h
Samples/CommonSrc/Render/: Render_D3D10_Device.cpp  Render_D3D11_Device.cpp  Render_D3D11_Device.h  Render_D3D1X_Device.cpp  Render_D3D1X_Device.h  Render_Device.h  Render_FontEmbed_DejaVu48.h  Render_GL_Device.h  Render_LoadTextureDDS.cpp  Render_LoadTextureTGA.cpp
Samples/CommonSrc/Util/: OptionMenu.h  RenderProfiler.cpp
Samples/OculusRoomTiny/: OculusRoomModel.cpp  RenderTiny_D3D11_Device.cpp  RenderTiny_D3D11_Device.h  Win32_OculusRoomTiny.cpp  Win32_OculusRoomTiny_Util.cpp
Samples/OculusWorldDemo/: OculusWorldDemo.cpp  OculusWorldDemo_Scene.cpp  Player.cpp
Tools/ShaderReflector/: ShaderReflector_VS2010.sln  ShaderReflector_VS2013.sln
Tools/ShaderReflector/ShaderReflector/: ShaderReflector.cpp  ShaderReflector_VS2010.vcxproj.filters  ShaderReflector_VS2013.vcxproj.filters
libovr_dll/: libovr.sln  libovr_dll.opensdf
libovr_dll/Debug/: libovr.exp  libovr.lib
libovr_dll/Release/: libovr.exp  libovr.lib
libovr_dll/libovr_dll/: ReadMe.txt  config.props  exports.def  libovr_dll.cpp  libovr_dll.h  libovr_dll.vcxproj  libovr_dll.vcxproj.filters  stdafx.cpp
libovr_dll/x64/Debug/: libovr.exp  libovr.lib
libovr_dll/x64/Release/: libovr.exp  libovr.lib
libovr_linux/: CMakeLists.txt
(+44 files in other folders)
